--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,16 @@
+# Ігнорування системних та IDE-файлів
 *.swp
 *.*~
 project.lock.json
 .DS_Store
 *.pyc
 nupkg/
-
-# Visual Studio Code
 .vscode
-
-# Rider
 .idea
-
-# User-specific files
 *.suo
 *.user
 *.userosscache
 *.sln.docstates
-
-# Build results
 [Dd]ebug/
 [Dd]ebugPublic/
 [Rr]elease/
@@ -32,6 +25,9 @@ bld/
 msbuild.log
 msbuild.err
 msbuild.wrn
-
-# Visual Studio 2015
 .vs/
+
+# Ігнорування файлів лабораторної
+index.json
+readme.txt
+*.html
